[package]
name = "hyper-starwars"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { path = "../../.." }
starwars = { path = "../../models/starwars" }
tokio = { version = "1.32", features = ["macros", "rt-multi-thread"] }
hyper = { version = "0.14", features = ["full"] }
serde_json = "1.0"
